--- a/lab_7_ids_2021_09_02-checkpoint.ipynb
+++ b/lab_7_ids_2021_09_02-checkpoint.ipynb
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e4b826bc",
+   "id": "701ef48d",
    "metadata": {},
    "outputs": [
     {
@@ -2261,7 +2261,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "209de2b4",
+   "id": "5c7d9b93",
    "metadata": {},
    "outputs": [
     {
@@ -2287,7 +2287,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8045e468",
+   "id": "7f33bc67",
    "metadata": {},
    "outputs": [
     {
@@ -2320,7 +2320,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8634b2fa",
+   "id": "3a5d304f",
    "metadata": {},
    "outputs": [
     {
@@ -2430,14 +2430,486 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "14167a29",
+   "execution_count": 47,
+   "id": "071287b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Q7\n",
-    "\n"
+    "\n",
+    "top_three = final_df[final_df['file'] == 'src/compiler/scala/reflect/reify/phases/Calculate.scala']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "c46bd83f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = top_three.groupby('user')['file'].count().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "2a843ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>xeno-by</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>retronym</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>soc</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       user  file\n",
+       "9   xeno-by    11\n",
+       "6  retronym     5\n",
+       "7       soc     4"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.sort_values(by='file',ascending=False).iloc[0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "f7f602cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pid</th>\n",
+       "      <th>user</th>\n",
+       "      <th>date</th>\n",
+       "      <th>file</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>162838837</td>\n",
+       "      <td>zuvizudar</td>\n",
+       "      <td>2018-01-14 19:16:16+00:00</td>\n",
+       "      <td>src/compiler/scala/reflect/reify/phases/Calcul...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26951</th>\n",
+       "      <td>22845163</td>\n",
+       "      <td>retronym</td>\n",
+       "      <td>2014-10-16 10:23:42+00:00</td>\n",
+       "      <td>src/compiler/scala/reflect/reify/phases/Calcul...</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32753</th>\n",
+       "      <td>12102550</td>\n",
+       "      <td>xeno-by</td>\n",
+       "      <td>2014-02-01 01:19:58+00:00</td>\n",
+       "      <td>src/compiler/scala/reflect/reify/phases/Calcul...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35420</th>\n",
+       "      <td>10587633</td>\n",
+       "      <td>retronym</td>\n",
+       "      <td>2013-12-06 10:04:43+00:00</td>\n",
+       "      <td>src/compiler/scala/reflect/reify/phases/Calcul...</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46700</th>\n",
+       "      <td>5320191</td>\n",
+       "      <td>soc</td>\n",
+       "      <td>2013-04-23 15:47:45+00:00</td>\n",
+       "      <td>src/compiler/scala/reflect/reify/phases/Calcul...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47009</th>\n",
+       "      <td>5291974</td>\n",
+       "      <td>bjornregnell</td>\n",
+       "      <td>2013-04-22 13:56:06+00:00</td>\n",
+       "      <td>src/compiler/scala/reflect/reify/phases/Calcul...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47567</th>\n",
+       "      <td>5050360</td>\n",
+       "      <td>retronym</td>\n",
+       "      <td>2013-04-09 06:13:57+00:00</td>\n",
+       "      <td>src/compiler/scala/reflect/reify/phases/Calcul...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47965</th>\n",
+       "      <td>5026775</td>\n",
+       "      <td>retronym</td>\n",
+       "      <td>2013-04-08 07:07:45+00:00</td>\n",
+       "      <td>src/compiler/scala/reflect/reify/phases/Calcul...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49156</th>\n",
+       "      <td>4786005</td>\n",
+       "      <td>starblood</td>\n",
+       "      <td>2013-03-25 02:48:48+00:00</td>\n",
+       "      <td>src/compiler/scala/reflect/reify/phases/Calcul...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51313</th>\n",
+       "      <td>4295399</td>\n",
+       "      <td>retronym</td>\n",
+       "      <td>2013-02-24 21:43:43+00:00</td>\n",
+       "      <td>src/compiler/scala/reflect/reify/phases/Calcul...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             pid          user                      date  \\\n",
+       "13     162838837     zuvizudar 2018-01-14 19:16:16+00:00   \n",
+       "26951   22845163      retronym 2014-10-16 10:23:42+00:00   \n",
+       "32753   12102550       xeno-by 2014-02-01 01:19:58+00:00   \n",
+       "35420   10587633      retronym 2013-12-06 10:04:43+00:00   \n",
+       "46700    5320191           soc 2013-04-23 15:47:45+00:00   \n",
+       "47009    5291974  bjornregnell 2013-04-22 13:56:06+00:00   \n",
+       "47567    5050360      retronym 2013-04-09 06:13:57+00:00   \n",
+       "47965    5026775      retronym 2013-04-08 07:07:45+00:00   \n",
+       "49156    4786005     starblood 2013-03-25 02:48:48+00:00   \n",
+       "51313    4295399      retronym 2013-02-24 21:43:43+00:00   \n",
+       "\n",
+       "                                                    file  month  \n",
+       "13     src/compiler/scala/reflect/reify/phases/Calcul...      1  \n",
+       "26951  src/compiler/scala/reflect/reify/phases/Calcul...     10  \n",
+       "32753  src/compiler/scala/reflect/reify/phases/Calcul...      2  \n",
+       "35420  src/compiler/scala/reflect/reify/phases/Calcul...     12  \n",
+       "46700  src/compiler/scala/reflect/reify/phases/Calcul...      4  \n",
+       "47009  src/compiler/scala/reflect/reify/phases/Calcul...      4  \n",
+       "47567  src/compiler/scala/reflect/reify/phases/Calcul...      4  \n",
+       "47965  src/compiler/scala/reflect/reify/phases/Calcul...      4  \n",
+       "49156  src/compiler/scala/reflect/reify/phases/Calcul...      3  \n",
+       "51313  src/compiler/scala/reflect/reify/phases/Calcul...      2  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Q8 \n",
+    "\n",
+    "top_three.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "dc3f0df3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Q9\n",
+    "\n",
+    "\n",
+    "final_df['year'] = final_df['date'].dt.year\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "060985f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pid</th>\n",
+       "      <th>user</th>\n",
+       "      <th>date</th>\n",
+       "      <th>file</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>163314316</td>\n",
+       "      <td>hrhino</td>\n",
+       "      <td>2018-01-16 23:29:16+00:00</td>\n",
+       "      <td>test/files/pos/t5638/Among.java</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>163314316</td>\n",
+       "      <td>hrhino</td>\n",
+       "      <td>2018-01-16 23:29:16+00:00</td>\n",
+       "      <td>test/files/pos/t5638/Usage.scala</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>163314316</td>\n",
+       "      <td>hrhino</td>\n",
+       "      <td>2018-01-16 23:29:16+00:00</td>\n",
+       "      <td>test/files/pos/t9291.scala</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>163314316</td>\n",
+       "      <td>hrhino</td>\n",
+       "      <td>2018-01-16 23:29:16+00:00</td>\n",
+       "      <td>test/files/run/t8348.check</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>163314316</td>\n",
+       "      <td>hrhino</td>\n",
+       "      <td>2018-01-16 23:29:16+00:00</td>\n",
+       "      <td>test/files/run/t8348/TableColumn.java</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         pid    user                      date  \\\n",
+       "0  163314316  hrhino 2018-01-16 23:29:16+00:00   \n",
+       "1  163314316  hrhino 2018-01-16 23:29:16+00:00   \n",
+       "2  163314316  hrhino 2018-01-16 23:29:16+00:00   \n",
+       "3  163314316  hrhino 2018-01-16 23:29:16+00:00   \n",
+       "4  163314316  hrhino 2018-01-16 23:29:16+00:00   \n",
+       "\n",
+       "                                    file  month  year  \n",
+       "0        test/files/pos/t5638/Among.java      1  2018  \n",
+       "1       test/files/pos/t5638/Usage.scala      1  2018  \n",
+       "2             test/files/pos/t9291.scala      1  2018  \n",
+       "3             test/files/run/t8348.check      1  2018  \n",
+       "4  test/files/run/t8348/TableColumn.java      1  2018  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "26be4721",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = final_df.groupby('year')['file'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "17c76370",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>28190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>22622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>8979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>9579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>8609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>6817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>202</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year   file\n",
+       "0  2011    590\n",
+       "1  2012  28190\n",
+       "2  2013  22622\n",
+       "3  2014   8979\n",
+       "4  2015   9579\n",
+       "5  2016   8609\n",
+       "6  2017   6817\n",
+       "7  2018    202"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a26ab052",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
